fix broken link

--- a/docs/source/get_data.ipynb
+++ b/docs/source/get_data.ipynb
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find the descriptions of all these tasks [here](https://individual-brain-charting.github.io/docs/task.html).\n",
+    "You can find the descriptions of all these tasks [here](https://individual-brain-charting.github.io/docs/tasks.html).\n",
     "\n"
    ]
   },
