--- a/docs/source/get_data.ipynb
+++ b/docs/source/get_data.ipynb
@@ -734,7 +734,7 @@
     "\n",
     "The following will save the requested maps under\n",
     "``ibc_data/resulting_smooth_maps/sub-08/task-Discount`` \n",
-    "(or whatever subject you chose). And will also create a local CSV file ``ibc_data/downloaded_statistic_map.csv`` to track the downloaded files. This will containing downloaded file paths and the time they were downloaded and is updated everytime you download new files.\n"
+    "(or whatever subject you chose). And will also create a local CSV file ``ibc_data/downloaded_statistic_map.csv`` to track the downloaded files. This will contain local file paths and the time they were downloaded at, and is updated everytime you download new files.\n"
    ]
   },
   {
