ENH: update references

--- a/docs/source/biblioibc.bib
+++ b/docs/source/biblioibc.bib
@@ -2605,6 +2605,17 @@ url = {https://doi.org/10.1002/hbm.25189},
 annotate = {* This paper introduces several key experiments on a fraction of the IBC dataset, namely the first release. In particular, it introduces the application of dictionary learning to summarize contrast maps to topographies. It studies the stability of the dictionary components across data resamplings. It also shows that some contrast maps can be successfully reconstructed from other contrasts. Finally, it illustrates how the accumulation of functional contrasts can help to distinguish between the functional specialization of several regions taken from the language network.}
 }
 
+@article{Pinho2024,
+  TITLE = {{Individual Brain Charting third release, probing brain activity during Movie Watching and Retinotopic Mapping}},
+  AUTHOR = {Pinho, Ana Lu{\'i}sa and Richard, Hugo and Ponce, Ana Fernanda and Eickenberg, Michael and Amadon, Alexis and Dohmatob, Elvis and Denghien, Isabelle and Torre, Juan Jes{\'u}s and Shankar, Swetha and Aggarwal, Himanshu and Thual, Alexis and Chapalain, Thomas and Ginisty, Chantal and Becuwe-Desmidt, S{\'e}verine and Roger, S{\'e}verine and Lecomte, Yann and Berland, Val{\'e}rie and Laurier, Laurence and Joly-Testault, V{\'e}ronique and M{\'e}diouni-Cloarec, Ga{\"e}lle and Doubl{\'e}, Christine and Martins, Bernadette and Varoquaux, Ga{\"e}l and Dehaene, Stanislas and Hertz-Pannier, Lucie and Thirion, Bertrand},
+  JOURNAL = {{Sci Data}},
+  VOLUME = {11},
+  NUMBER = {590},
+  MONTH = {June},
+  YEAR = {2024},
+  URL = {https://doi.org/10.1038/s41597-024-03390-1},
+}
+
 @ARTICLE{Poldrack2011,
 AUTHOR={Poldrack, Russell and Kittur, Aniket and Kalar, Donald and Miller, Eric and Seppa, Christian and Gil, Yolanda and Parker, D. and Sabb, Fred and Bilder, Robert},
 TITLE={The {C}ognitive {A}tlas: {T}oward a {K}nowledge {F}oundation for {C}ognitive {N}euroscience},
